fix picker focus, fix overflow regression

--- a/src/components/Overflow/overflow.scss
+++ b/src/components/Overflow/overflow.scss
@@ -118,7 +118,7 @@
   }
 }
 
-:root.light .overflow {
+:root.light .vui-overflow {
   .overflow-shadow-left {
     background: linear-gradient(to right, var(--vui-overflow-shadow-color), transparent);
   }
